--- a/logger.ipynb
+++ b/logger.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "75894852",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e561f683",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "08f37af8",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cd1a25a1",
    "metadata": {},
    "outputs": [],
@@ -191,12 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b96cfd6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "from datetime import datetime as dt\n",
+    "\n",
     "def get_as_fired_pdfs(folder_path):\n",
     "    return [\n",
     "        f for f in os.listdir(folder_path)\n",
@@ -211,6 +213,10 @@
     "    data = extract_all(clean_text, patterns)\n",
     "    row = [data.get(col, \"\") for col in COLUMNS]\n",
     "\n",
+    "    # Converting Date String into Datetime object\n",
+    "    row[0] = dt.strptime(row[0], '%Y.%m.%d')\n",
+    "    row[1] = dt.strptime(row[1], '%Y.%m.%d')\n",
+    "\n",
     "    from openpyxl import load_workbook\n",
     "\n",
     "    wb = load_workbook(\"coal_data_as_fired.xlsx\")\n",
@@ -218,6 +224,24 @@
     "\n",
     "    ws.append(row)\n",
     "    wb.save(\"coal_data_as_fired.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "af76e275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[datetime.datetime(2026, 1, 11, 0, 0), datetime.datetime(2026, 1, 10, 0, 0), '28.40', '19.51', '4.79', '5.39', '0.47', '0.53', '33.94', '38.16', '4896', '5504', '1200', '1230']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(row)"
    ]
   }
  ],
